--- a/pet_airbnb_front_end/package.json
+++ b/pet_airbnb_front_end/package.json
@@ -11,6 +11,8 @@
     "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-addons": "^0.9.1-deprecated",
+    "react-date-picker": "^8.0.1",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
     "react-google-maps": "^9.4.5",
