--- a/pet_airbnb_front_end/package.json
+++ b/pet_airbnb_front_end/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.6",
+    "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-addons": "^0.9.1-deprecated",
     "react-alert": "^7.0.1",
@@ -18,6 +19,8 @@
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
     "react-google-maps": "^9.4.5",
+    "react-icons": "^3.10.0",
+    "react-moment": "^0.9.7",
     "react-pure-render": "^1.0.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
