--- a/pet_airbnb_front_end/package.json
+++ b/pet_airbnb_front_end/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.0",
     "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.6",
     "moment": "^2.26.0",
@@ -14,6 +15,7 @@
     "react-addons": "^0.9.1-deprecated",
     "react-alert": "^7.0.1",
     "react-alert-template-basic": "^1.0.0",
+    "react-bootstrap": "^1.0.1",
     "react-date-picker": "^8.0.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
